# 3d-registration-pcl

./: .clang-format  .cppcheck  .editorconfig  ALGORITHM_IMPROVEMENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER.md  Dockerfile  Doxyfile  OPTIMIZATIONS.md  README.md  docker-compose.yml  exp_sacia_param_grid_search.cpp  experiment2.cpp  experiment2_ds.cpp  experiment_test.cpp  fred_exp_sacia_param_grid_search.cpp  harris_pipeline.cpp  launch_demo.sh  main_registration.cpp  run_all_experiments.sh  run_demo.sh  sift_pipeline.cpp  verification_test1.cpp  verification_test2.cpp  visualization.cpp
.github/workflows/: ci.yml
.sisyphus/run-continuation/: ses_1e3febdf5ffeWgppykgkUb4UPA.json
benchmarks/: README.md  benchmark.hpp  benchmark_registration.cpp
configs/: README.md  allpoints_pipeline.txt  harris_pipeline.txt  harris_pipeline_with_icp.txt  iss_pipeline.txt  sift_pipeline.txt  sift_pipeline_with_icp.txt
data/: 600m-40deg-FOV_rotation-Z.txt  exp_sacia_param_grid_search.txt  exp_sacia_param_grid_search_yaw110deg.txt  harris_600m-40deg-FOV_rotation-Z.txt  iss_600m-40deg-FOV_rotation-Z.txt  params_experiment2_ds.txt  params_simple_setup_ds_harris.txt  params_simple_setup_ds_harris_all.txt  params_simple_setup_ds_sift.txt  source_verification1.pcd  target_verification1.pcd  test.txt
include/: Settings.hpp  file_io.hpp  param_parsing.hpp  parameters.hpp  point_cloud_formats.hpp  randomization.hpp  registration.hpp  tools.hpp  visualization.cpp  visualization_tools.hpp
results/: .~lock.exp_sacia_param_grid_search_fixedYaw_29-07-2021 11-43-50.csv#  all_600m-40deg-FOV_rotation-Z_results.csv  data_save_run1.txt  exp_sacia_param_grid_search_fixedYaw_29-07-2021 15-04-50.csv  exp_sacia_param_grid_search_fixedYaw_29-07-2021 15-04-50.ods  exp_sacia_param_grid_search_fixedYaw_29-07-2021 15-04-50_FRED.csv  exp_sacia_param_grid_search_fixedYaw_30-07-2021 11-41-25.csv  exp_sacia_param_grid_search_fixedYaw_30-07-2021 16-37-42.csv  harris_600m-40deg-FOV_rotation-Z.txt_results  harris_600m-40deg-FOV_rotation-Z_results.csv  param_search_ds_results_22-07-2021 14-46-39.csv  param_search_ds_results_26-07-2021 11-45-32.csv  param_search_ds_results_26-07-2021 11-54-30.csv  param_search_ds_results_27-07-2021 11-35-23.csv  param_search_ds_results_27-07-2021 11-55-59.csv  param_search_ds_results_27-07-2021 12-13-43.csv  param_search_ds_results_27-07-2021 14-15-59.csv  parameters.txt_results  sift_600m-40deg-FOV_rotation-Z_results.csv
src/: cpp_version.cpp  exp_sacia_param_grid_search.cpp  experiment2.cpp  experiment2_ds.cpp  experiment_test.cpp  file_io.cpp  fred_exp_sacia_param_grid_search.cpp  main_registration.cpp  parameters.cpp  point_cloud_converter.cpp  randomization.cpp  registration.cpp  tools.cpp  verification_test1.cpp  verification_test2.cpp  visualization.cpp  visualization_tools.cpp
tests/: CMakeLists.txt  test_error_metrics.cpp  test_file_io.cpp  test_point_cloud_utils.cpp  test_randomization.cpp  test_settings.cpp  test_transformation.cpp
