set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (experiment2 experiment2.cpp)
target_link_libraries (experiment2 ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (experiment2_ds experiment2_ds.cpp)
target_link_libraries (experiment2_ds ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (verification_test1 verification_test1.cpp)
target_link_libraries (verification_test1 ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (verification_test2 verification_test2.cpp)
target_link_libraries (verification_test2 ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (fred_exp_sacia_param_grid_search fred_exp_sacia_param_grid_search.cpp)
target_link_libraries (fred_exp_sacia_param_grid_search ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (exp_sacia_param_grid_search exp_sacia_param_grid_search.cpp)
target_link_libraries (exp_sacia_param_grid_search ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (visualization ../include/visualization.cpp)
target_link_libraries (visualization ${PCL_LIBRARIES})

cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_test1)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (cpp_version ../include/cpp_version.cpp)
target_link_libraries (cpp_version ${PCL_LIBRARIES})
